gitops/clusters/de/hetzner/cluster/apps/ai-gateway-llm/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-gateway-llm
  namespace: envoy-gateway-system
  annotations:
    tailscale.com/proxy-group: "ingress"
    tailscale.com/tags: "tag:services"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - ai
  defaultBackend:
    service:
      name: envoy-envoy-gateway-system-gateway-4864c4ea
      port:
        number: 80
